# ChangeLog for dev-python/libgnomecanvas-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/libgnomecanvas-python/ChangeLog,v 1.10 2009/04/28 14:28:34 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  arm/sh stable

  23 Mar 2009; Jeroen Roovers <jer@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  Stable for HPPA (bug #257004).

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  ia64/sparc stable wrt #258040

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  amd64/x86 stable, bug #258040

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  Marking libgnomecanvas-python-2.22.3 ppc stable for bug 258040

  03 Mar 2009; Brent Baude <ranger@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  Marking libgnomecanvas-python-2.22.3 ppc64 stable for bug 258040

  14 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
  libgnomecanvas-python-2.22.3.ebuild:
  Stable on alpha, bug #258040

*libgnomecanvas-python-2.22.3 (22 Sep 2008)

  22 Sep 2008; Mart Raudsepp <leio@gentoo.org>
  -libgnomecanvas-python-2.22.2.ebuild,
  +libgnomecanvas-python-2.22.3.ebuild:
  New version with temporary build regression fixed

*libgnomecanvas-python-2.22.2 (22 Sep 2008)

  22 Sep 2008; Mart Raudsepp <leio@gentoo.org>
  +libgnomecanvas-python-2.22.2.ebuild:
  Version bump for forwards compatibility with upcoming major
  pygobject/pygtk versions (pygtk-codegen-2.0 move to pygobject-codegen-2.0)

*libgnomecanvas-python-2.22.1 (24 Aug 2008)

  24 Aug 2008; Arun Raghavan <ford_prefect@gentoo.org> +metadata.xml,
  +libgnomecanvas-python-2.22.1.ebuild:
  Initial import of gnome-python split ebuilds. This package installs
  bindings for the Gnome Canvas library.
