@@ -1,4 +1,6 @@
 DIST gnome-python-2.22.3.tar.bz2 588459 RMD160 81772db78abe864dcbf3c89b7f864dd3b8ba41d3 SHA1 35eafe4f5ab9ee003a573dcf26699d3b03d52d5a SHA256 a1763ef40aa0fc152e1afe6be6b01d69ba305273bd4bd44cad018da42d1bb559
+DIST gnome-python-2.26.1.tar.bz2 523132 RMD160 054901ecd209953225ccfa725fdd9164447fbb49 SHA1 789627d4107aa50cd7fc763c4de015032346524e SHA256 ede0203f1eec22b3ed4a91c7b769e437859e5bc4b89a8f8e80b3f7ca62317098
 EBUILD libgnomecanvas-python-2.22.3.ebuild 624 RMD160 7456b0a31df7f296b546c47d4198016fb534dfca SHA1 960f9c3e643322cc4c5abb45b72078f625192dd4 SHA256 a7ebaa7c5de1d52f0aeff15a3626e96c7c8aac3a0522a2fb482e886fe0b17656
-MISC ChangeLog 1900 RMD160 25ba75fba129b19cf0717bf4f3cd44ae3fced58d SHA1 b5bc3060a0af546d2c6baf0c31b0111f30be822e SHA256 9dc3a87d472418cdb3060cfb6e23dcf5b67f08b4c34c2f8f6a867a2158fce55a
+EBUILD libgnomecanvas-python-2.26.1.ebuild 622 RMD160 81f8ce4168d2d15df65e443b80bacabff0352cf8 SHA1 f3acc00d1fbe68d8df0e2c3352954865058df2f9 SHA256 db5bcfb58531a684d79bec67078dc73ec288a08223cb9ab01741cbe15a4a072d
+MISC ChangeLog 2130 RMD160 9be99779d4458f8d256493beab992a671e847468 SHA1 2ca6c60183eccf5c70e18b96631ec8f975c4cd82 SHA256 e7a5046f8fdbc66212062490a5c302ad94ed56a287c7d3c54193be9719b4dd21
 MISC metadata.xml 178 RMD160 ec0937689a645defb2b870b481c4d4db57a0fa73 SHA1 aa77d904544ca6e6e684658ec652463fdb2ca58d SHA256 ccdf4a821074a281d4fd442460b65f57e77546cea36756c435db5529d22fa2a6
