@@ -1,0 +1,20 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/libgnomecanvas-python/libgnomecanvas-python-2.26.1.ebuild,v 1.1 2009/05/10 21:49:56 eva Exp $
+
+G_PY_PN="gnome-python"
+G_PY_BINDINGS="gnomecanvas"
+
+inherit gnome-python-common
+
+DESCRIPTION="Python bindings for the Gnome Canvas library"
+LICENSE="LGPL-2.1"
+SLOT="2"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
+IUSE="examples"
+
+RDEPEND=">=gnome-base/libgnomecanvas-2.8.0
+	!<dev-python/gnome-python-2.22.1"
+DEPEND="${RDEPEND}"
+
+EXAMPLES="examples/canvas/*"
